fix: hide scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -68,15 +68,16 @@
 }
 
 .fav-container {
-  overflow-y: auto; /* Scroll solo all'interno della tabella */
+  overflow-y: auto; 
+  scrollbar-width: none;
   width: 100%;
   max-height: 84vh;
-
 }
 
 .portfolio-container {
   max-height: 74vh;
-  overflow-y: auto; /* Scroll solo all'interno della tabella */
+  overflow-y: auto; 
+  scrollbar-width: none;
   width: 100%;
 }
 
@@ -217,6 +218,7 @@ thead {
   width: 70%;
   margin: 0 auto;
   overflow-y: auto;
+  scrollbar-width: none;
 }
 
 .news-title {
